tests/algorithms/x/Java/data_structures/queues/linked_queue.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden242_linked_queue1818792753/001/Main.java:95: error: incompatible types: Object[] cannot be converted to Node[]
q.nodes = new Object[]{};
          ^
1 error
